# openvibe

./: .gitignore  AUTHORS  COPYING  INSTALL  README
openvibe-applications/acquisition-server/branches/wip-jlegeny-fieldtrip/: CMakeLists.txt
openvibe-applications/acquisition-server/branches/wip-jlegeny-fieldtrip/src/: ovasCAcquisitionServer.h  ovasCAcquisitionServerGUI.cpp  ovasCAcquisitionServerThread.h  ovasCConfigurationBuilder.h  ovasCHeader.cpp  ovas_base.h  ovas_defines.h  ovas_main.cpp
openvibe-applications/acquisition-server/branches/wip-jlegeny-software-tagging/: CMakeLists.txt
openvibe-applications/acquisition-server/branches/wip-jlegeny-software-tagging/src/: ovasCAcquisitionServer.cpp  ovasCAcquisitionServer.h  ovasCAcquisitionServerGUI.cpp  ovasCConfigurationNetworkBuilder.h  ovasIDriver.h
openvibe-applications/designer/tags/wip-omk4/: CMakeLists.txt
openvibe-applications/designer/tags/wip-omk4/src/: ovdCBoxProxy.cpp  ovdCBoxProxy.h  ovdCConnectorEditor.cpp  ovdCConnectorEditor.h  ovdCDesignerVisualisation.cpp  ovdCDesignerVisualisation.h  ovdCInputDialog.cpp  ovdCInputDialog.h  ovdCInterfacedObject.h  ovdCInterfacedScenario.cpp  ovdCInterfacedScenario.h  ovdCLinkProxy.cpp  ovdCLinkProxy.h  ovdCPlayerVisualisation.cpp  ovdCPlayerVisualisation.h  ovdCSettingEditor.cpp  ovdCSettingEditor.h  ovdTAttributeHandler.cpp  ovdTAttributeHandler.h  ovd_base.h  ovd_defines.h  ovd_main.cpp
openvibe-applications/vr-demo/trunc/: CMakeLists.txt
openvibe-applications/vr-demo/trunc/src/: ovaCAbstractVrpnPeripheral.cpp  ovaCAbstractVrpnPeripheral.h  ovavrdCOgreVRApplication.cpp  ovavrdCOgreVRApplication.h  ovavrd_main.cpp
openvibe-applications/vr-demo/trunc/src/HandballBCI/: ovavrdCHandballBCI.cpp  ovavrdCHandballBCI.h
openvibe-applications/vr-demo/trunc/src/TieFighterBCI/: ovavrdCTieFighterBCI.cpp  ovavrdCTieFighterBCI.h
openvibe-applications/vr-demo/trunc/test/: ovaC3DEntityManipulator.cpp  ovaC3DEntityManipulator.h  ovaCManipulable3DEntity.cpp  ovaCManipulable3DEntity.h  ovaCNeurofeedbackManipulator.cpp  ovaCNeurofeedbackManipulator.h  ovaCNeurofeedbackScoreCounter.cpp  ovaCNeurofeedbackScoreCounter.h  ovaCNeurofeedbackSwitch.cpp  ovaCNeurofeedbackSwitch.h
openvibe-kernel-omk/tags/wip-omk4/src/: CMakeLists.txt  FindThirdPartyOgre3D.cmake
openvibe-kernel-omk/tags/wip-omk4/src/openvibe-kernel/: ovk_defines.h  ovk_main.cpp
openvibe-kernel-omk/trunc/: CMakeLists.txt
openvibe-kernel-omk/trunc/share/: openvibe-delayed.conf  openvibe.conf
openvibe-kernel-omk/trunc/share/openvibe-kernel-omk/: cone_ov.material  ogre.cfg  resources.cfg  sphere_ov.material  sphere_ov.mesh
openvibe-kernel-omk/trunc/src/openvibe-kernel/: ovk_base.h  ovk_defines.h  ovk_main.cpp  ovk_tools.h
openvibe-kernel-omk/trunc/src/openvibe-kernel/kernel/: ovkCKernelContext.cpp  ovkCKernelContext.h  ovkCKernelObjectFactory.cpp  ovkCKernelObjectFactory.h  ovkCObjectVisitorContext.cpp  ovkCObjectVisitorContext.h  ovkCParameter.h  ovkCTypeManager.cpp  ovkCTypeManager.h  ovkGtkOVCustom.cpp  ovkGtkOVCustom.h  ovkIGtkOVCustomHandler.h  ovkTConfigurable.h  ovkTKernelObject.h  ovkTParameter.h
openvibe-kernel-omk/trunc/src/openvibe-kernel/tools/: ovkCScopeTester.h  ovk_bridge_bind_function.h  ovk_identifier_map_iterator.h
openvibe-modules/ebml/trunc/test/: CMakeLists.txt  test_ebml_read.cpp  test_ebml_tree.cpp  test_ebml_write.cpp
openvibe-modules/fs/trunc/test/: CMakeLists.txt  test_fs.cpp
openvibe-modules/socket/trunc/test/: CMakeLists.txt  test_socket_client.cpp  test_socket_server.cpp
openvibe-modules/system/trunc/test/: CMakeLists.txt  test_endian.cpp  test_time.cpp
openvibe-modules/xml/trunc/test/: CMakeLists.txt  test_xml_read.cpp  test_xml_write.cpp
openvibe-plugins/signal-processing/trunc/: CMakeLists.txt
openvibe-plugins/signal-processing/trunc/src/: ovpCAlgorithmUnivariateStatistics.cpp  ovpCAlgorithmUnivariateStatistics.h  ovpCBandFrequencyAverage.cpp  ovpCBandFrequencyAverage.h  ovpCBoxAlgorithmQuadraticForm.cpp  ovpCBoxAlgorithmQuadraticForm.h  ovpCBoxAlgorithmUnivariateStatistics.cpp  ovpCBoxAlgorithmUnivariateStatistics.h  ovpCChannelSelector.cpp  ovpCChannelSelector.h  ovpCEpoching.cpp  ovpCEpoching.h  ovpCFirstDifferenceDetrending.cpp  ovpCFirstDifferenceDetrending.h  ovpCReferenceChannel.cpp  ovpCReferenceChannel.h  ovpCSecondDifferenceDetrending.cpp  ovpCSecondDifferenceDetrending.h  ovpCSignalAverage.cpp  ovpCSignalAverage.h  ovpCSignalConcat.cpp  ovpCSignalConcat.h  ovpCSimpleDSP.cpp  ovpCSimpleDSP.h  ovpCSteadyStateFrequencyComparison.cpp  ovpCSteadyStateFrequencyComparison.h  ovpCTimeBasedEpoching.cpp  ovpCTimeBasedEpoching.h  ovp_defines.h  ovp_main.cpp
openvibe-plugins/signal-processing/trunc/src/doc/: Doc_BoxAlgorithm_ChannelRename.dox-part  Doc_BoxAlgorithm_ChannelSelector.dox-part  Doc_BoxAlgorithm_ChannelSelectorDeprecated.dox-part  Doc_BoxAlgorithm_CommonAverageReference.dox-part  Doc_BoxAlgorithm_Crop.dox-part  Doc_BoxAlgorithm_EpochAverage.dox-part  Doc_BoxAlgorithm_FirstDifferenceDetrending.dox-part  Doc_BoxAlgorithm_FrequencyBandSelector.dox-part  Doc_BoxAlgorithm_QuadraticForm.dox-part  Doc_BoxAlgorithm_ReferenceChannel.dox-part  Doc_BoxAlgorithm_SecondDifferenceDetrending.dox-part  Doc_BoxAlgorithm_SignalAverage.dox-part  Doc_BoxAlgorithm_SignalDecimation.dox-part  Doc_BoxAlgorithm_SignalDifferential_Integral.dox-part  Doc_BoxAlgorithm_SimpleDSP.dox-part  Doc_BoxAlgorithm_SpatialFilter.dox-part  Doc_BoxAlgorithm_SpectrumAverage.dox-part  Doc_BoxAlgorithm_StimulationBasedEpoching.dox-part  Doc_BoxAlgorithm_StreamSynchronization.dox-part  Doc_BoxAlgorithm_TimeBasedEpoching.dox-part  Doc_BoxAlgorithm_UnivariateStatistics.dox-part
openvibe-plugins/signal-processing/trunc/src/ovpCSimpleDSP/: ovpCAbstractTree.cpp  ovpCAbstractTree.h  ovpCEquationParser.cpp  ovpCEquationParser.h  ovpCEquationParserGrammar.h
openvibe/tags/wip-omk4/src/: CMakeLists.txt
openvibe/tags/wip-omk4/src/doc/: CreatingNewPlugins.dox  Groups.dox  Mainpage.dox  doxyfile  doxygen.css  footer.html
openvibe/tags/wip-omk4/src/openvibe/: ovCIdentifier.cpp  ovCIdentifier.h  ovCString.h  (+16 more)
(+1785 files in other folders)
