INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})
ADD_DEFINITIONS(-D_CRT_SECURE_NO_DEPRECATE)
ADD_EXECUTABLE(test_fs-dynamic test_fs.cpp)
ADD_EXECUTABLE(test_fs-static test_fs.cpp)
TARGET_LINK_LIBRARIES(test_fs-dynamic ${PROJECT_NAME}-dynamic)
TARGET_LINK_LIBRARIES(test_fs-static ${PROJECT_NAME}-static)
