INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})
ADD_DEFINITIONS(-D_CRT_SECURE_NO_DEPRECATE)
ADD_EXECUTABLE(test_socket_client-dynamic test_socket_client.cpp)
ADD_EXECUTABLE(test_socket_client-static test_socket_client.cpp)
ADD_EXECUTABLE(test_socket_server-dynamic test_socket_server.cpp)
ADD_EXECUTABLE(test_socket_server-static test_socket_server.cpp)
TARGET_LINK_LIBRARIES(test_socket_client-dynamic ${PROJECT_NAME}-dynamic)
TARGET_LINK_LIBRARIES(test_socket_client-static ${PROJECT_NAME}-static)
TARGET_LINK_LIBRARIES(test_socket_server-dynamic ${PROJECT_NAME}-dynamic)
TARGET_LINK_LIBRARIES(test_socket_server-static ${PROJECT_NAME}-static)
